style2.css
@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap");

html {
  font-family: "Poppins", sans-serif;
  scroll-behavior: smooth;
}

.row {
  background-color: #fff;
}

.fixed {
  overflow: hidden;
}

.flex-container {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

footer {
  background-color: blue;
  font-family: "Poppins", sans-serif;
}

.page-one {
  border-radius: 0 0 60px 0;
  font-family: "Poppins", sans-serif;
  background-image: url(img/Desktop/Header-bg.svg);
  height: 100vh;
}

main {
  margin-top: 10rem;
}

main h1 {
  font-style: normal;
  font-weight: 700;
  font-size: 48px;
  color: #091e42;
  animation-name: color-change;
  animation-duration: 5s;
  animation-iteration-count: infinite;
  animation-timing-function: linear;
  animation-direction: alternate;
}

@keyframes color-change {
  100% {
    color: #6070ff;
  }
}

.wrapCards {
  margin-top: 5rem;
}

.card .badge {
  background-color: #ebebff;
}

.card {
  width: 700px;
}

.about-me {
  border-radius: 60px 0 0 0;
}

.about-me img {
  height: 50px;
  width: 50px;
}

.last-page {
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: #6070ff;
  border-radius: 60px 0 0 0;
  overflow-x: hidden;
}

.contactinfo {
  width: 300px;
}

form {
  width: 700px;
}

.ds-none {
  display: none;
}

.menu-wrapper .menu ul {
  display: flex;
  padding: 0;
  list-style-type: none;
}

input {
  width: 700px;
}

.overlay {
  position: fixed;
  display: none;
  height: 100vh;
  left: 0;
  right: 0;
  bottom: 0;
  top: 0;
  z-index: 3;
  justify-content: center;
  background-color: rgba(193, 199, 208, 0.8);
  backdrop-filter: blur(5px);
  padding: 10px 20px;
}

.overlay .hide-ruby .taglist {
  border-bottom: 1px solid #e5e5e5;
}

.overlay article {
  margin-top: 100px;
}

.overlay .card-body img {
  width: 12px;
  height: auto;
}

.overlay .overlay-footer {
  justify-content: space-around;
}

.overlay .overlay-footer button {
  width: 130px;
}

.overlay .images {
  width: 100%;
}

.article-card {
  width: 90%;
  max-width: 90%;
  margin: 40px auto;
}

.overlay .overlay-close {
  width: 20px;
  position: absolute;
  right: 40px;
  top: 60px;
}

@media only screen and (max-width: 600px) {
  .page-one {
    width: 375px;
    height: 718px;
    background-image: url(img/header-shapes\ mobile@2x.svg);
  }

  header .navbar {
    width: 375px;
    margin: auto;
    background-color: white;
  }

  main {
    margin-top: 5rem;
  }

  main h1 {
    font-size: 40px;
  }

  main .lead {
    font-size: 16px;
    line-height: 24px;
  }

  .card {
    display: flex;
    flex-direction: column;
  }

  .card img {
    text-align: center;
  }

  .card .images {
    display: flex;
    align-items: center;
    justify-content: center;
  }

  .card .ruby {
    display: none;
  }

  .last-page {
    width: 375px;
    height: 779px;
    display: flex;
    align-items: center;
    justify-content: center;
    background-image: url(img/Contact\ me.png);
    overflow-x: hidden;
  }

  .menu-wrapper .menu ul {
    display: none;
  }

  .menu-wrapper .menu .menu-icon {
    display: flex;
  }

  .menu-wrapper .menu .mobile-menu {
    position: fixed;
    left: 0;
    top: 0;
    bottom: 0;
    right: 0;
    z-index: 1;
    color: #fff;
    display: flex;
    font-size: 32px;
    line-height: 44px;
    font-weight: 600;
    flex-direction: column;
    opacity: 0.9;
    padding: 0;
    margin: 0;
    background-color: rgba(50, 70, 255, 0.8);
    list-style-type: none;
    backdrop-filter: blur(5px);
    height: 100vh;
  }

  .menu-wrapper .menu .mobile-menu li {
    margin: 20px 0 0 28px;
  }

  .hide-ruby .taglist li:nth-child(2) {
    display: none;
  }

  .menu-wrapper .menu .mobile-menu li:first-child {
    display: flex;
    justify-content: flex-end;
    margin: 49px 38px 0;
  }

  .menu-wrapper .menu .mobile-menu li a {
    color: #fff;
  }

  .overlay .overlay-close {
    right: 20px;
    top: 15px;
  }
}

